[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kivi_qwen2"
version = "0.1.0"
description = "KIVI asymmetric KV-cache quantisation for Qwen2/Qwen2.5 (HuggingFace DynamicCache drop-in)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.43",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kivi_qwen2*"]
